fix css spacing

--- a/packages/better-react-tagsinput/styles/tag.css
+++ b/packages/better-react-tagsinput/styles/tag.css
@@ -5,8 +5,7 @@
   border: 1px solid #d9d9d9;
   background-color: #ededed;
   white-space: nowrap;
-  margin-right: 5px;
-  margin-bottom: 5px;
+  margin: 2px 3px;
   user-select: none;
 }
 
